@@ -2,4 +2,23 @@
 
 pattern naming : {application}-{profile}.properties/yml
 
-profile is profile maven for subsidiary
+Fichier Edition Format Affichage Aide
+systemProp.http-proxyHost=srv-tmg
+systemProp.http.proxyPort=8080
+systemProp.http-proxyUser=elai
+systemProp.http.proxyPassword=$199
+systemProp.http.nonProxyHosts=10.*|10.*|10.*;172.20.*
+systemProp.https.proxyHost=srv-tmg
+systemProp.https.proxyPort=8080
+systemProp.https.proxyUser=elaidia
+systemProp.https.proxyPassword=Sg19951995
+systemProp.https.nonProxyHosts=10.*|10.*|10.*;172.20.*
+sgMvnRepo-https://mvn.scale5.io/repository/maven-sg
+sgMvnReleasesRepo=https: //mvn.scale5.io/repository/maven-sg
+5gMvnSnapshotsRepo=https://mvn.scale5.io/repository/maven-sg
+sgMvnUser=bank
+sgMvnPassword=0sPryDencci
+org-gradle.jvmargs=-Xmx1024m -XX:MaxPermSize=512m -Djavax.net.ssl.keyStore="C:/Program Files/Java/jdk1.8.0_321/jre/lib/security/cacerts* -Djavax.net.ssl.keyStorePassword=changeit
+systemProp.maven.wagon.http.ssl.insecure=true
+systemProp.maven.wagon.http.ssl.allowall=true
+systemProp.maven.wagon.http.ssl.ignore.validity.dates=true
